syntax = "proto3";

option java_package = "com.example.demo.message";
option java_multiple_files = true;

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply){};
}
